--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -2,16 +2,13 @@
 <nav class="wizard-sidebar bg-light border-end p-2 flex-shrink-0" x-data="{ treeShowAllModules: false }">
   <h3 class="text-muted" x-text="translate('LBL_MODULES')"></h3>
   <div class="text-muted form-check form-switch">
-    <input
-      class="form-check-input"
-      type="checkbox"
-      role="switch"
-      x-model="treeShowAllModules"
-      id="switch_TreeAllModules"
-      checked
-      x-on:change="treeToggleAllModules(treeShowAllModules)"
-    />
-    <label class="form-check-label" for="switch_TreeAllModules" x-text="translate('LBL_SHOW_ALL_MODULES')"></label>
+    <div
+      id="switch_TreeAllModules1"
+      data-model="treeShowAllModules"
+      data-label="LBL_SHOW_ALL_MODULES"
+      data-attribute="x-on:change='treeToggleAllModules(treeShowAllModules)'"
+      x-init="sticControls.fieldCheckbox($el);"
+    ></div>
   </div>
   <div id="jstree-loading" style="display: flex; justify-content: center; align-items: center; height: 200px">
     <div class="spinner-border text-secondary" role="status"></div>
@@ -34,14 +31,12 @@
     <!-- Selected item Details [DEBUG] -->
     <div class="text-muted mt-5" x-data="{ showDetailsData: false }">
       <div class="form-check form-switch mb-3">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          role="switch"
-          id="showDetailsDataToggleSwitch"
-          x-model="showDetailsData"
-        />
-        <label class="form-check-label" for="showDetailsDataToggleSwitch">[Mostrar Detalles]</label>
+        <div
+        id="showDetailsDataToggleSwitch"
+        data-model="treeShowAllModules"
+        data-label-text="[Mostrar Detalles]"
+        x-init="sticControls.fieldCheckbox($el);"
+      ></div>
       </div>
       <div class="card p-4" x-show="showDetailsData">
         <h3 class="card-title" x-text="treeSelectedRelatedModule.pathText?.join(' » ')"></h3>
