--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
@@ -2,98 +2,74 @@
   <div class="container">
     <div class="row">
       <!-- Name -->
-      <div class="col-6">
-        <div id="name" data-model="bean.name" data-label="LBL_NAME" required x-init="sticControls.fieldText($el)"></div>
-      </div>
+      <div
+        class="col-6"
+        id="name"
+        data-model="bean.name"
+        data-label="LBL_NAME"
+        required
+        x-init="sticControls.fieldText($el)"
+      ></div>
 
       <!-- Assigned user -->
-      <div class="col-6">
-        <!-- <div
-          id="assigned_user_name"
-          data-model="bean.assigned_user_name"
-          data-label="LBL_ASSIGNED_TO_NAME"
-          data-module="field_to_name_array"
-          data-mode="single o multiselect"
-          x-init="sticControls.fieldPopup($el)"
-        ></div> -->
-        <label class="form-label" for="assigned_user_name" x-text="translate('LBL_ASSIGNED_TO_NAME') + ':'"></label>
-        <div class="input-group">
-          <input
-            class="form-control"
-            type="text"
-            id="assigned_user_name"
-            x-model="bean.assigned_user_name"
-            autocomplete="off"
-          />
-          <input type="hidden" id="assigned_user_id" x-model="bean.assigned_user_id" />
-          <!-- single / multiselect -->
-          <button
-            class="btn"
-            type="button"
-            @click="open_popup('Users', 600, 400, '', true, false, {
-                                'call_back_function':'set_wizard_assigned_user',
-                                'field_to_name_array': { 'id':'assigned_user_id', 'user_name':'assigned_user_name' }
-                              },'single', true);"
-          >
-            <span class="suitepicon suitepicon-action-select"></span>
-          </button>
-          <button class="btn" type="button" @click="bean.assigned_user_id='';bean.assigned_user_name='';">
-            <span class="suitepicon suitepicon-action-clear"></span>
-          </button>
-        </div>
-      </div>
+      <div
+        class="col-6"
+        id="assigned_user"
+        data-label="LBL_ASSIGNED_TO_NAME"
+        data-model-name="bean.assigned_user_name"
+        data-model-id="bean.assigned_user_id"
+        data-module="Users"
+        data-call-back-function="set_wizard_assigned_user"
+        data-field-to-name-array="{'id':'assigned_user_id', 'user_name':'assigned_user_name'}"
+        data-mode="single"
+        x-init="sticControls.fieldPopup($el)"
+      ></div>
     </div>
 
     <div class="row">
       <!-- Base Module -->
-      <div class="col-6">
-        <div
-          id="base_module"
-          data-model="bean.base_module"
-          data-label="LBL_BASE_MODULE"
-          data-map="enabledStudioModules"
-          data-map-property="text"
-          required
-          x-init="sticControls.fieldSelect($el)"
-        ></div>
-      </div>
+      <div
+        class="col-6"
+        id="base_module"
+        data-model="bean.base_module"
+        data-label="LBL_BASE_MODULE"
+        data-map="enabledStudioModules"
+        data-map-property="text"
+        required
+        x-init="sticControls.fieldSelect($el)"
+      ></div>
 
       <!-- Processing mode -->
-      <div class="col-6">
-        <div
-          id="processing_mode"
-          data-model="bean.processing_mode"
-          data-label="LBL_PROCESSING_MODE"
-          data-map="appListStrings.stic_advanced_web_forms_processing_mode_list"
-          x-init="sticControls.fieldSelect($el)"
-        ></div>
-      </div>
+      <div
+        class="col-6"
+        id="processing_mode"
+        data-model="bean.processing_mode"
+        data-label="LBL_PROCESSING_MODE"
+        data-map="appListStrings.stic_advanced_web_forms_processing_mode_list"
+        x-init="sticControls.fieldSelect($el)"
+      ></div>
     </div>
 
     <div class="row">
       <!-- Generate url -->
-      <div class="col-6">
-        <div
-          id="generate_url"
-          data-model="bean.generate_url"
-          data-label="LBL_GENERATE_URL"
-          x-init="sticControls.fieldCheckbox($el)"
-        ></div>
-      </div>
+      <div
+        class="col-6 form-check form-switch"
+        id="generate_url"
+        data-model="bean.generate_url"
+        data-label="LBL_GENERATE_URL"
+        x-init="sticControls.fieldCheckbox($el)"
+      ></div>
     </div>
 
     <!-- Description -->
     <div class="row">
-      <div class="col-12">
-        <div
+      <div
+        class="col-12"
         id="description"
         data-model="bean.description"
         data-label="LBL_DESCRIPTION"
         x-init="sticControls.fieldTextarea($el)"
       ></div>
-        <!-- <label class="form-label" for="description" x-text="translate('LBL_DESCRIPTION') + ':'"></label>
-        <textarea class="form-control" id="description" x-model="bean.description"> </textarea> -->
-      </div>
     </div>
   </div>
 
