--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
@@ -80,6 +80,6 @@
     <p x-text="'Generate Url: ' + bean.generate_url"></p>
     <p x-text="'Processing Mode: ' + bean.processing_mode"></p>
     <p x-text="'Description: ' + bean.description"></p>
-    <p x-text="'Config: ' + bean.config_json"></p>
+    <p x-text="'Config: ' + formConfig_json()"></p>
   </div>
 </form>
