--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -26,7 +26,14 @@
   <h3 class="mb-2" x-text="translate('LBL_DATABLOCKS')"></h3>
   <div class="flex-fill border rounded p-2 bg-white">
     <!-- Main Content -->
-    <div class="card p-4"></div>
+    <div class="card p-4">
+      <div
+        class="mt-3"
+        id="dataBlocksTable"
+        data-objects="formConfig.data_blocks"
+        x-init="sticControls.elemTableObjects($el);"
+      ></div>
+    </div>
 
     <!-- Selected item Details [DEBUG] -->
     <div
