--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -28,31 +28,54 @@
     <!-- Main Content -->
     <div class="card p-4">
       <template x-for="(item, key) in formConfig.data_blocks">
-        <div class="card mb-4">
+        <div class="card mb-4" :x-data="{item: item, key: key}">
           <div class="card-body">
             <div class="card-title">
+              <div class="d-flex justify-content-between">
               <h4
                 :id="'dataBlockTitleEdit-'+item.name"
-                data-model="formConfig.data_blocks[key].text"
-                data-condition="formConfig.data_blocks[key].editable_text"
+                data-model="item.text"
+                data-condition="item.editable_text"
                 x-init="sticControls.editableText($el);"
               ></h4>
+              <template x-if="!item.required">
+                <span class="btn suitepicon suitepicon-action-delete" @click="deleteDataBlock(key);"></span>
+              </template>
+              </div>
               <template x-if="item.module">
                 <h5 class="text-muted" x-text="getModuleInformation(item.module).text + ' (' + item.name + ')'"></h5>
               </template>
             </div>
 
             <div class="card-text">
-              <div :id="'dataBlockFields'+item.name">[Los campos del Bloque de datos]</div>
+              <!-- Definición de campos -->
+              <div :id="'dataBlockFields'+item.name">
+                [Los campos del Bloque de datos]
+                <div
+                  class="mt-3"
+                  :id="'dataFieldsTable'+item.name"
+                  :data-objects="'item.fields'"
+                  x-init="sticControls.elemTableObjects($el);"
+                ></div>
+              </div>
               <template x-if="item.module">
-                <div :id="'dataBlockDuplicates'+item.name">[Seleccionar duplicados y acción]</div>
+                <!-- Definición de duplicados -->
+                <div :id="'dataBlockDuplicates'+item.name">
+                  [Seleccionar duplicados y acción]
+                  <div
+                    class="mt-3"
+                    :id="'dataDuplicateTable'+item.name"
+                    :data-model="'item.duplicate_detection'"
+                    x-init="sticControls.elemTableObject($el);"
+                  ></div>
+                </div>
               </template>
 
               <template x-if="item.module">
                 <div
                   :id="'dataDef_'+item.name"
                   :data-sections="JSON.stringify([
-                                    {headerText:`translate('LBL_FIELDS') + ' (${item.fields.length})'`, selected:true, contentId:'dataBlockFields'+item.name},
+                                    {headerText:`translate('LBL_FIELDS') + ' (' + item.fields.length +')'`, selected:true, contentId:'dataBlockFields'+item.name},
                                     {headerText:`translate('LBL_DUPLICATE_CHECK')`, selected:false, contentId:'dataBlockDuplicates'+item.name}
                                   ]);"
                   x-init="sticControls.accordion($el)"
@@ -62,7 +85,7 @@
                 <div
                   :id="'dataDef_'+item.name"
                   :data-sections="JSON.stringify([
-                                    {headerText:`translate('LBL_FIELDS') + ' (${item.fields.length})'`, selected:true, contentId:'dataBlockFields'+item.name},
+                                    {headerText:`translate('LBL_FIELDS') + ' (' + item.fields.length +')'`, selected:true, contentId:'dataBlockFields'+item.name},
                                   ]);"
                   x-init="sticControls.accordion($el)"
                 ></div>
@@ -75,102 +98,102 @@
 
     <!-- Details Data [DEBUG] -->
     <div x-data="{ showDetails: false}">
-    <div
-      class="text-muted form-check form-switch mb-3 mt-5"
-      id="showDetailsDataToggleSwitch"
-      data-model="showDetails"
-      data-label-text="[Mostrar Detalles]"
-      x-init="sticControls.fieldCheckbox($el);"
-    ></div>
-    <div class="card p-4" x-show="showDetails">
-      <!-- Data Blocks -->
-      <div id="detailsDataBlocks">
-        <div
-          class="mt-3"
-          id="dataBlocksTable"
-          data-objects="formConfig.data_blocks"
-          x-init="sticControls.elemTableObjects($el);"
-        ></div>
-      </div>
+      <div
+        class="text-muted form-check form-switch mb-3 mt-5"
+        id="showDetailsDataToggleSwitch"
+        data-model="showDetails"
+        data-label-text="[Mostrar Detalles]"
+        x-init="sticControls.fieldCheckbox($el);"
+      ></div>
+      <div class="card p-4" x-show="showDetails">
+        <!-- Data Blocks -->
+        <div id="detailsDataBlocks">
+          <div
+            class="mt-3"
+            id="dataBlocksTable"
+            data-objects="formConfig.data_blocks"
+            x-init="sticControls.elemTableObjects($el);"
+          ></div>
+        </div>
 
-      <!-- Selected Node -->
-      <div id="detailsNode">
-        <h3 class="card-title" x-text="step2.treeSelectedRelatedModule.pathText?.join(' » ')"></h3>
-        <!-- General Data -->
-        <div id="detailsNodeGeneralData">
-          <h4 class="card-title mb-4" x-text="step2.treeSelectedRelatedModule.name + ' - General Data'"></h4>
-          <template x-for="(value, key) in step2.treeSelectedRelatedModule">
-            <template x-if="key!='fields' && key!='relationships'">
-              <template x-if="value!=''">
-                <p x-text="key + ': ' + value"></p>
+        <!-- Selected Node -->
+        <div id="detailsNode">
+          <h3 class="card-title" x-text="step2.treeSelectedRelatedModule.pathText?.join(' » ')"></h3>
+          <!-- General Data -->
+          <div id="detailsNodeGeneralData">
+            <h4 class="card-title mb-4" x-text="step2.treeSelectedRelatedModule.name + ' - General Data'"></h4>
+            <template x-for="(value, key) in step2.treeSelectedRelatedModule">
+              <template x-if="key!='fields' && key!='relationships'">
+                <template x-if="value!=''">
+                  <p x-text="key + ': ' + value"></p>
+                </template>
               </template>
             </template>
-          </template>
-        </div>
-        <!-- Fields -->
-        <div id="detailsNodeFields" x-data="{ hideNotInView: false, hideNotRequired: false}">
-          <h4
-            class="card-title mb-4"
-            x-text="(step2.treeSelectedRelatedModule.isRelation?step2.treeSelectedRelatedModule.moduleDestName:step2.treeSelectedRelatedModule.name) + ' - Fields'"
-          ></h4>
+          </div>
+          <!-- Fields -->
+          <div id="detailsNodeFields" x-data="{ hideNotInView: false, hideNotRequired: false}">
+            <h4
+              class="card-title mb-4"
+              x-text="(step2.treeSelectedRelatedModule.isRelation?step2.treeSelectedRelatedModule.moduleDestName:step2.treeSelectedRelatedModule.name) + ' - Fields'"
+            ></h4>
+            <div
+              class="form-check form-switch form-check-inline"
+              id="detailsFieldsInViewToggleSwitch"
+              data-model="hideNotInView"
+              data-label-text="[Ocultar no in View]"
+              x-init="sticControls.fieldCheckbox($el);"
+            ></div>
+            <div
+              class="form-check form-switch form-check-inline"
+              id="detailsFieldsRequiredToggleSwitch"
+              data-model="hideNotRequired"
+              data-label-text="[Ocultar no required]"
+              x-init="sticControls.fieldCheckbox($el);"
+            ></div>
+            <div
+              class="mt-3"
+              id="detailsFieldsTable"
+              data-objects="step2.treeSelectedRelatedModule.fields"
+              data-show-row="(!hideNotRequired || step2.treeSelectedRelatedModule.fields[key].required) && (!hideNotInView || step2.treeSelectedRelatedModule.fields[key].inViews)"
+              x-init="sticControls.elemTableObjects($el);"
+            ></div>
+          </div>
+          <!-- Relationships -->
+          <div id="detailsNodeRelationships">
+            <h4
+              class="card-title mb-4"
+              x-text="(step2.treeSelectedRelatedModule.isRelation?step2.treeSelectedRelatedModule.moduleDestName:step2.treeSelectedRelatedModule.name) + ' - Relationships'"
+            ></h4>
+            <div
+              class="mt-3"
+              id="detailsRelationshipsTable"
+              data-objects="step2.treeSelectedRelatedModule.relationships"
+              x-init="sticControls.elemTableObjects($el);"
+            ></div>
+          </div>
+
+          <!-- Tab Headers -->
           <div
-            class="form-check form-switch form-check-inline"
-            id="detailsFieldsInViewToggleSwitch"
-            data-model="hideNotInView"
-            data-label-text="[Ocultar no in View]"
-            x-init="sticControls.fieldCheckbox($el);"
-          ></div>
-          <div
-            class="form-check form-switch form-check-inline"
-            id="detailsFieldsRequiredToggleSwitch"
-            data-model="hideNotRequired"
-            data-label-text="[Ocultar no required]"
-            x-init="sticControls.fieldCheckbox($el);"
-          ></div>
-          <div
-            class="mt-3"
-            id="detailsFieldsTable"
-            data-objects="step2.treeSelectedRelatedModule.fields"
-            data-show-row="(!hideNotRequired || step2.treeSelectedRelatedModule.fields[key].required) && (!hideNotInView || step2.treeSelectedRelatedModule.fields[key].inViews)"
-            x-init="sticControls.elemTableObjects($el);"
-          ></div>
-        </div>
-        <!-- Relationships -->
-        <div id="detailsNodeRelationships">
-          <h4
-            class="card-title mb-4"
-            x-text="(step2.treeSelectedRelatedModule.isRelation?step2.treeSelectedRelatedModule.moduleDestName:step2.treeSelectedRelatedModule.name) + ' - Relationships'"
-          ></h4>
-          <div
-            class="mt-3"
-            id="detailsRelationshipsTable"
-            data-objects="step2.treeSelectedRelatedModule.relationships"
-            x-init="sticControls.elemTableObjects($el);"
+            id="detailsNode"
+            :data-sections="JSON.stringify([
+                          {headerText:`'[Datos Generales]'`, selected:true, contentId:'detailsNodeGeneralData'},
+                          {headerText:`'[Campos]'`, selected:false, contentId:'detailsNodeFields'},
+                          {headerText:`'[Relaciones]'`, selected:false, contentId:'detailsNodeRelationships'},
+                        ]);"
+            x-init="sticControls.tabs($el)"
           ></div>
         </div>
 
         <!-- Tab Headers -->
         <div
-          id="detailsNode"
+          id="details"
           :data-sections="JSON.stringify([
-                          {headerText:`'[Datos Generales]'`, selected:true, contentId:'detailsNodeGeneralData'},
-                          {headerText:`'[Campos]'`, selected:false, contentId:'detailsNodeFields'},
-                          {headerText:`'[Relaciones]'`, selected:false, contentId:'detailsNodeRelationships'},
+                          {headerText:`'[Bloques de datos]'`, selected:true, contentId:'detailsDataBlocks'},
+                          {headerText:`'[Nodo seleccionado]'`, selected:false, contentId:'detailsNode'},
                         ]);"
           x-init="sticControls.tabs($el)"
         ></div>
       </div>
-
-      <!-- Tab Headers -->
-      <div
-        id="details"
-        :data-sections="JSON.stringify([
-                          {headerText:`'[Bloques de datos]'`, selected:true, contentId:'detailsDataBlocks'},
-                          {headerText:`'[Nodo seleccionado]'`, selected:false, contentId:'detailsNode'},
-                        ]);"
-        x-init="sticControls.tabs($el)"
-      ></div>
-    </div>
     </div>
   </div>
 </main>
