Fix Gestión de DataBlocks. Módulos únicos

--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -38,7 +38,7 @@
                 data-condition="item.editable_text"
                 x-init="sticControls.editableText($el);"
               ></h4>
-              <template x-if="!item.required">
+              <template x-if="'required' in item && typeof item.required === 'function' && !item.required()">
                 <span class="btn suitepicon suitepicon-action-delete" @click="deleteDataBlock(key);"></span>
               </template>
               </div>
